# tukey-turkey-triumph

./: .gitignore  GEODESIC.md  MATHJS_UPDATE_NOTES.md  README.md  index.html  netlify-build.sh  netlify.toml  package-lock.json  package.json  playwright.config.js  rotation-challenge.html  schur-bug-test.js  schur-challenge.html  turkey-test.html  vite.config.js
.dependencies/: mathjs-15.1.0.tgz
.github/workflows/: build.yml  pages.yml
e2e/: README.md  basic.spec.js
public/: placeholder-friend-turkey.png.txt  placeholder-tukey-portrait.png.txt
src/: game.js  geodesic-example.js  geodesic-wasm.js  geodesic-wasm.test.js  geodesic.js  geodesic.test.js  main.js  math4d.js  math4d.test.js  rotation-challenge-main.js  rotation-challenge.js  scatterplot.js  schur-challenge-main.js  schur-challenge.js  sphere-path.js  style.css  turkey.js
wasm-logm/: .gitignore  Cargo.toml  README.md  build-if-available.sh  build.sh
wasm-logm/pkg/: README.md  package.json  wasm_logm.d.ts  wasm_logm.js  wasm_logm_bg.wasm  wasm_logm_bg.wasm.d.ts
wasm-logm/src/: lib.rs
